Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,26 +2,26 @@
 <html ng-app="uReact">
 <head>
   <title> U React! </title>
-  <link rel="apple-touch-icon-precomposed" async sizes="57x57" href="../img/image.png" />
-  <link rel="shortcut icon" type="image/x-icon" async href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
-  <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' async rel='stylesheet' type='text/css'>
-  <link async rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="apple-touch-icon-precomposed"  sizes="57x57" href="../img/image.png" />
+  <link rel="shortcut icon" type="image/x-icon"  href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
+  <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway'  rel='stylesheet' type='text/css'>
+  <link  rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" async href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
+  <link rel="stylesheet"  href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 
   <!-- jQuery library -->
-  <script async src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script  src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
-  <script async src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script  src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <meta name="google-site-verification" content="v_SFDR9KhAEayFR-Bl9zWNTBOUtjbqZb-T_Kr8_ziXI" />
   <meta charset="utf-8" />
   <meta name = "description" content="Welcome to U React! This is a fun game about clicking boxes quickly as they appear on the screen!"/>
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"/>
-  <link async rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
-  <script async type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
-  <script async src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
+  <link  rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
+  <script  type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
+  <script  src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
   <script>
   $(document).ready(function() {
     $('.tooltip').tooltipster();
@@ -66,7 +66,7 @@
       <div ng-show="!form.$valid" role="alert">
         <div id="errormes" >Please Input a valid number number, the number has to be greater than zero and be a whole number. </div>
       </div>
-        <input id="submit" class="btn" type="submit"></button>
+        <input id="submit" class="btn btn-success" type="submit"></button>
       </form>
       <p id="how"> How Many Blocks? </how>
       </div>
