--- a/pages/home.html
+++ b/pages/home.html
@@ -62,9 +62,9 @@
       <button id="custom" type="button" class="btn btn-danger" ng-click="sub.click()"> Custom Amount </button>
       <div id="controllerForm">
       <form id="form" name="form" ng-submit="sub.submit(form.num)" novalidate>
-        <input id="custom-form" ng-model="number" name="num" type="number" value = "20" min="1" required onlyDigits></input>
+        <input id="custom-form" ng-model="number" name="num" type="number" value = "20" min="2" required onlyDigits></input>
       <div ng-show="!form.$valid" role="alert">
-        <div id="errormes" >Please Input a valid number number, the number has to be greater than zero and be a whole number. </div>
+        <div id="errormes" >Please Input a valid number number, the number has to be greater than one and be a whole number. </div>
       </div>
         <input id="submit" class="btn btn-success" type="submit"></button>
       </form>
