Adding SPA for bug and survey pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -75,8 +75,8 @@
         <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
         <p id="youhit"> You hit <span id="boxesHit"> </span> out of <span id="boxyouon"></span> boxes! </p>
         <p id="youscore"> You scored </p>
-        <a href="../pages/survey.html" id="survey"> Please click here to take a quick survey on the quality of this website! </a>
-        <a href="../pages/bugs.html" id="bugs"> If there were any mistakes or bugs in the game, please click here! </a>
+        <a id="survey"> Please click here to take a quick survey on the quality of this website! </a>
+        <a id="bugs"> If there were any mistakes or bugs in the game, please click here! </a>
         <button id="playAgain" type="button" class="btn btn-success"> Play Again? </button>
       </div>
       <div id="game" class="hide">
@@ -93,6 +93,8 @@
         <a class="a2a_button_twitter"></a>
         <a class="a2a_button_google_plus"></a>
       </div>
+      <bug-page id="bpage"></bug-page>
+      <survey-page id="spage"></survey-page>
       <script>
       var a2a_config = a2a_config || {};
       a2a_config.linkname = "Hey! I was just play UReact, a fun reaction time tester and you should play it too! ";
